--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
     >
+      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+      <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
       <activity
         android:name=".SplashActivity"
         android:theme="@style/SplashTheme"
@@ -35,4 +37,5 @@
         </intent-filter>
       </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
