--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/auth": "^16.4.6",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -23,6 +24,7 @@
     "react": "18.0.0",
     "react-i18next": "^11.18.3",
     "react-native": "0.69.3",
+    "react-native-fbsdk-next": "^11.1.0",
     "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
