--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.0.0",
     "react-i18next": "^11.18.3",
     "react-native": "0.69.3",
+    "react-native-calendars": "^1.1293.0",
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.5.0",
