--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-paper": "^5.1.4",
     "react-native-reanimated": "^2.9.1",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0"
