--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^11.18.3",
     "react-native": "0.69.3",
     "react-native-calendars": "^1.1293.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.5.0",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux-flipper": "^2.0.2",
