--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.32.0",
@@ -53,7 +59,8 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "^2.7.1",
-    "react-test-renderer": "18.0.0"
+    "react-test-renderer": "18.0.0",
+    "typescript": "^4.9.5"
   },
   "jest": {
     "preset": "react-native",
