--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-firebase/app": "^16.4.6",
-    "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
+    "@react-native-firebase/firestore": "^17.3.2",
+    "@react-native-firebase/storage": "^17.3.2",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -29,13 +32,17 @@
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-image-crop-picker": "0.38.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.1.4",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^13.8.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0"
   },
