--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
-    "@reduxjs/toolkit": "^1.8.3",
     "i18next": "^21.8.14",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
@@ -41,10 +40,7 @@
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.2",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux-flipper": "^2.0.2",
-    "redux-persist": "^6.0.0"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -54,7 +50,6 @@
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
     "@types/react-native": "^0.71.3",
-    "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
