--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
+      hermesCommand: '../../node_modules/react-native/sdks/hermesc/%OS-BIN%/hermesc.exe'
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
