--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "clean:drawable": "del .\\android\\app\\src\\main\\res\\drawable-* && del  .\\android\\app\\src\\main\\res\\raw",
+    "generate:bundle": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && npm run clean:drawable",
+    "android:release": "npm run generate:bundle && npx react-native run-android --variant=release",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
@@ -22,6 +26,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "i18next": "^21.8.14",
+    "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-i18next": "^11.18.3",
